# Zerodha_crypto_wallet

./: .gitignore
server/: Cargo.toml
server/migrations/: 20260416130933_create_users.sql  20260416140419_balance.sql  20260416145512_create_transactions.sql  20260417055659_add_username_column.sql
server/src/: main.rs
server/src/routes/: health.rs  mod.rs  signin.rs  signup.rs
