[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
dotenvy = "0.15.7"
bcrypt = "0.19.0"
jsonwebtoken = "10.3.0"
validator = { version = "0.19", features = ["derive"] }
